# cancer-detection

./: README.md  notebook.ipynb  pyproject.toml  submission.csv
models/: EfficientCancerCNN.pt
