[tool.poetry]
name = "cancer-detection"
version = "0.1.0"
description = ""
authors = ["Ryan Rogers <rrogers522@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
python-dotenv = "^1.0.1"
kaggle = "^1.6.8"
seaborn = "^0.13.2"
matplotlib = "^3.8.4"
jupyter = "^1.0.0"
opencv-python = "^4.9.0.80"
pandas = "^2.2.1"
numpy = "^1.26.4"
tensorflow-io-gcs-filesystem = "0.31.0"
torch = { url = "https://download.pytorch.org/whl/cu121/torch-2.2.2%2Bcu121-cp311-cp311-win_amd64.whl"}
torchvision = { url = "https://download.pytorch.org/whl/cu121/torchvision-0.17.2%2Bcu121-cp311-cp311-win_amd64.whl"}
pillow = "^10.3.0"
scikit-image = "^0.22.0"
scikit-learn = "^1.4.1.post1"
tqdm = "^4.66.2"
optuna = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
